<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="UHe-vc-QkP">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Navigation Controller-->
        <scene sceneID="KNL-38-JUT">
            <objects>
                <navigationController id="UHe-vc-QkP" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="kQe-lI-0cA">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="W2U-Qw-MrH"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="i1c-2x-NUC" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-2151" y="99"/>
        </scene>
        <!--Transfer Money View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="TransferMoneyViewController" customModule="TransferNow" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ixR-j9-rlX">
                                <rect key="frame" x="60" y="319" width="255" height="29"/>
                                <state key="normal" title="Send"/>
                                <connections>
                                    <action selector="onClickSend:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gSp-DU-1FI"/>
                                    <segue destination="ARX-Vp-X3e" kind="show" identifier="TransferSuccessViewController" id="vwP-wU-qpv"/>
                                </connections>
                            </button>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dnz-0A-8Xv">
                                <rect key="frame" x="27" y="64" width="321" height="185"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="From Account" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bU4-8z-jDx">
                                        <rect key="frame" x="33" y="16" width="280" height="30"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="To Account" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mOI-T1-ZNV">
                                        <rect key="frame" x="33" y="69" width="280" height="30"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Amount (HKD)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fnP-BL-8vB">
                                        <rect key="frame" x="33" y="123" width="280" height="30"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                </subviews>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstItem="mOI-T1-ZNV" firstAttribute="leading" secondItem="bU4-8z-jDx" secondAttribute="leading" id="5vt-0T-s4l"/>
                                    <constraint firstItem="bU4-8z-jDx" firstAttribute="leading" secondItem="dnz-0A-8Xv" secondAttribute="leading" constant="33" id="Fnn-Zg-JqG"/>
                                    <constraint firstItem="mOI-T1-ZNV" firstAttribute="trailing" secondItem="fnP-BL-8vB" secondAttribute="trailing" id="GFv-YU-4JH"/>
                                    <constraint firstAttribute="trailing" secondItem="bU4-8z-jDx" secondAttribute="trailing" constant="8" id="Jqa-XZ-pwg"/>
                                    <constraint firstItem="mOI-T1-ZNV" firstAttribute="leading" secondItem="fnP-BL-8vB" secondAttribute="leading" id="hXC-HQ-6MY"/>
                                    <constraint firstItem="mOI-T1-ZNV" firstAttribute="trailing" secondItem="bU4-8z-jDx" secondAttribute="trailing" id="oE8-f6-cgs"/>
                                    <constraint firstItem="fnP-BL-8vB" firstAttribute="top" secondItem="mOI-T1-ZNV" secondAttribute="bottom" constant="24" id="sEo-J0-W4l"/>
                                    <constraint firstItem="mOI-T1-ZNV" firstAttribute="top" secondItem="bU4-8z-jDx" secondAttribute="bottom" constant="23" id="tJR-NO-2PM"/>
                                    <constraint firstItem="mOI-T1-ZNV" firstAttribute="top" secondItem="dnz-0A-8Xv" secondAttribute="top" constant="69" id="vZV-Fs-A0N"/>
                                </constraints>
                            </view>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="ixR-j9-rlX" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="0tW-ud-EEf"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="dnz-0A-8Xv" secondAttribute="trailing" constant="27" id="6Bi-Zr-e50"/>
                            <constraint firstItem="dnz-0A-8Xv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="27" id="GxV-Th-LKF"/>
                            <constraint firstItem="dnz-0A-8Xv" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="JsB-ey-ibg"/>
                            <constraint firstItem="ixR-j9-rlX" firstAttribute="centerX" secondItem="dnz-0A-8Xv" secondAttribute="centerX" id="NlL-Qz-4Da"/>
                            <constraint firstItem="ixR-j9-rlX" firstAttribute="top" secondItem="dnz-0A-8Xv" secondAttribute="bottom" constant="70" id="TTI-R4-ge0"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ixR-j9-rlX" secondAttribute="bottom" constant="319" id="nWg-go-VGd"/>
                            <constraint firstItem="ixR-j9-rlX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="60" id="uQ6-ja-Wit"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" id="6aD-ya-2UI"/>
                    <connections>
                        <outlet property="SendBtn" destination="ixR-j9-rlX" id="cQ7-eE-rn4"/>
                        <outlet property="amountTextField" destination="fnP-BL-8vB" id="pdO-jk-foM"/>
                        <outlet property="fromAccountNumberTextField" destination="bU4-8z-jDx" id="lHD-Rh-TmG"/>
                        <outlet property="toAccountNumberTextField" destination="mOI-T1-ZNV" id="M0w-rL-Pwg"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-1300" y="98.50074962518741"/>
        </scene>
        <!--Transfer Success View Controller-->
        <scene sceneID="9xm-8f-nTa">
            <objects>
                <viewController storyboardIdentifier="TransferSuccessViewController" id="ARX-Vp-X3e" customClass="TransferSuccessViewController" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="hP6-t6-AOK">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Success" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lmv-vo-RR6">
                                <rect key="frame" x="139.5" y="348.5" width="96" height="34"/>
                                <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="31"/>
                                <color key="textColor" red="0.21571186202303161" green="1" blue="0.15669130140348764" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <constraints>
                            <constraint firstItem="Lmv-vo-RR6" firstAttribute="centerX" secondItem="q08-GK-pKj" secondAttribute="centerX" id="PQP-jd-8q5"/>
                            <constraint firstItem="Lmv-vo-RR6" firstAttribute="centerY" secondItem="q08-GK-pKj" secondAttribute="centerY" id="x1r-fE-3rH"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="q08-GK-pKj"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="xzI-Yf-nUz" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-414" y="99"/>
        </scene>
    </scenes>
</document>
