...
import UIKit

class TransferMoneyViewController: UIViewController {

    // MARK: - Properties
    var apiManager: APIManager!
    let errorTitle = NSLocalizedString("Error", comment: "Error")
    let okBtnTitle = NSLocalizedString("OK", comment: "OK")
    var isSuccessResponse: Bool = false

    @IBOutlet weak var fromAccountNumberTextField: UITextField!
    @IBOutlet weak var toAccountNumberTextField: UITextField!
    @IBOutlet weak var amountTextField: UITextField!
    @IBOutlet weak var SendBtn: UIButton!
...
